I am done for today reached 2.21h on the brocode tutorial, will do the approx first 5 hour of this tutorial, then head to the udemy data science courses to improve that side of my coding.

--- a/brocode_python.ipynb
+++ b/brocode_python.ipynb
@@ -988,10 +988,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello! Ege   Kockaya\n",
+      "You are 27 age old\n",
+      "have a nice day.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function : a block of code which is executed only when it is called \n",
+    "\n",
+    "def hello(first, last, age):  # to add parameter to the function list it in the bracets, we can give this information when running the function\n",
+    "    print(\"hello! \"+ first, \" \", last)\n",
+    "    print(\"You are \" +str(age)+ \" age old\")\n",
+    "    print(\"have a nice day.\")\n",
+    "\n",
+    "#hello(\"Ege\")\n",
+    "#hello(\"Mr.Ege\")\n",
+    "\n",
+    "my_name = \"Ege Kockaya\"\n",
+    "#hello(my_name)\n",
+    "\n",
+    "hello(\"Ege\",\"Kockaya\", 27)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n"
+     ]
+    }
+   ],
+   "source": [
+    "# return statement: Functions send Python values/objects back to the caller, these values/objects are known as the function's return value.\n",
+    "\n",
+    "def multiply(number1, number2):\n",
+    "    return number1 * number2\n",
+    "\n",
+    "print(multiply(6,8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Ege Huseyin Kockaya\n"
+     ]
+    }
+   ],
+   "source": [
+    "# keyword arguements: preceeded by an identifier when we pass them to a function, the order of the arguements doesn't matter. \n",
+    "\n",
+    "def hello(first, middle, last):\n",
+    "    print(\"hello \" + first +\" \"+ middle +\" \"+ last)\n",
+    "\n",
+    "hello(last=\"Kockaya\", first=\"Ege\", middle=\"Huseyin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# nested function calls: function calls inside of other function calls,\n",
+    "           # innermost function calls are resolved first, returned value is used as arguement for the next outer function \n",
+    "\n",
+    "print(round(abs(float(input(\"Enter a whole positive number:\")))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ege\n"
+     ]
+    }
+   ],
+   "source": [
+    "# scope = the region that a variable is recognized, a variable which is ony recognized inside the region it's created is a local fuction.\n",
+    "\n",
+    "def display_name():\n",
+    "    namel = \"Ege\"   ## this is a local variable because it's only known inside this function.\n",
+    "    print (namel)\n",
+    "\n",
+    "# print(namel) #not possible gives error \n",
+    "\n",
+    "display_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "8\n",
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# *args parameter : parameter that will pack all arguements into a tuple, \n",
+    "                # useful so that a funciton can accept a varying amount of arguements\n",
+    "\n",
+    "def add(num1, num2):\n",
+    "    sum = num1 + num2\n",
+    "    return sum\n",
+    "\n",
+    "print(add(1,2))\n",
+    "\n",
+    "# instead\n",
+    "\n",
+    "def adda(*args):\n",
+    "    sum = 0\n",
+    "    for i in args:\n",
+    "        sum = sum + i\n",
+    "    return sum\n",
+    "\n",
+    "print(adda(2,4,2))\n",
+    "print(adda(4,6,8,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Mr. Ege Huseyin Kockaya "
+     ]
+    }
+   ],
+   "source": [
+    "# Kwargs = parameter that will pack all arguements into a dictionary, fuction will accept varying amount of keywoard arguements. \n",
+    "\n",
+    "def hellok(**kwargs):\n",
+    "    print(\"Hello\", end=\" \")\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(value, end = \" \")\n",
+    "    \n",
+    "hellok (title = \"Mr.\", first=  \"Ege\", middle = \"Huseyin\", last= \"Kockaya\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
