Did one session before sleeping on 12 June 2024

--- a/brocode_python.ipynb
+++ b/brocode_python.ipynb
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1168,6 +1168,167 @@
     "    \n",
     "hellok (title = \"Mr.\", first=  \"Ege\", middle = \"Huseyin\", last= \"Kockaya\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cow jumped over the moon\n",
+      "The moon jumped over the cow\n",
+      "The cow jumped over the moon\n"
+     ]
+    }
+   ],
+   "source": [
+    "#12 June 2024 session\n",
+    "##string format() = optional method that gives users more control when displaying output\n",
+    "\n",
+    "animal = \"cow\"\n",
+    "item = \"moon\"\n",
+    "\n",
+    "print (\"The \" +animal+ \" jumped over the \" + item)\n",
+    "\n",
+    "# more elegant \n",
+    "print(\"The {1} jumped over the {0}\".format(animal,item)) # -> looks great\n",
+    "\n",
+    "# more more elegant\n",
+    "text = \"The {} jumped over the {}\"\n",
+    "print(text.format(animal, item))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is Ege\n",
+      "Hello, my names is Ege       . Nice to meet you\n",
+      "Hello, my names is        Ege. Nice to meet you\n",
+      "Hello, my names is    Ege    . Nice to meet you\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Ege\"\n",
+    "\n",
+    "print (\"Hello, my name is {}\".format(name))\n",
+    "\n",
+    "# adding padding space around the object in print\n",
+    "print(\"Hello, my names is {:<10}. Nice to meet you\".format(name)) # left align\n",
+    "print(\"Hello, my names is {:>10}. Nice to meet you\".format(name)) # right align\n",
+    "print(\"Hello, my names is {:^10}. Nice to meet you\".format(name)) # center\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number pi is 3.14\n",
+      "The number is 1111101000\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 3.14159\n",
+    "number1=1000\n",
+    "\n",
+    "print(\"The number pi is {:.2f}\".format(number)) #dislaying only 2 floating points after the decimal digit. \n",
+    "print(\"The number is {:b}\".format(number1)) #shows number in binary \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0.5049493254351739\n",
+      "scissory\n",
+      "[6, 4, 2, 7, 8, 3, 'J', 'A', 'Q', 1, 5, 'K', 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# randomness (pseudo)\n",
+    "\n",
+    "import random\n",
+    "x = random.randint(1,6)\n",
+    "print(x)\n",
+    "y=random.random()\n",
+    "print(y)\n",
+    "\n",
+    "mylist = [\"rock\", \"paper\", \"scissory\"]\n",
+    "z=random.choice(mylist)\n",
+    "print(z)\n",
+    "\n",
+    "cards=[1,2,3,4,5,6,7,8,9,\"J\",\"Q\",\"K\",\"A\"]\n",
+    "random.shuffle(cards)\n",
+    "print(cards)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250.81220657276995\n",
+      "This will always execute.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exception = events detected during execution that interrupt the flow of a program \n",
+    "try:\n",
+    "    numerator = int(input(\"Enter a number to divide: \"))\n",
+    "    denominator = int(input(\"Enter a number to divide by: \"))\n",
+    "    result = numerator/denominator\n",
+    "    \n",
+    "except ZeroDivisionError as e:\n",
+    "    print(e)\n",
+    "    print(\"You can't divide by 0 >:(\")\n",
+    "except ValueError as e:\n",
+    "    print(e)\n",
+    "    print(\"Divide by a number please.\")\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    print(\"Something went wrong I dont know why :( try again\")\n",
+    "else:\n",
+    "    print(result)\n",
+    "finally:\n",
+    "    print(\"This will always execute.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# file detection\n",
+    "import os \n"
    ]
   }
  ],
